Removing /restart routes. Just use 'update' instead.
