# src/services/serversService.ts
@@ -72,35 +72,6 @@ class ServersService {
     res.json(server);
   }
 
-  /* POST restart an existing server. */
-  async restartServer(req: Request, res: Response) {
-    const { hostId, serverId } = req.params;
-    const dbServer = await this.prisma.server
-      .findUniqueOrThrow({
-        where: { id: String(serverId), hostId: String(hostId) },
-        select: ServersService.defaultServerSelect,
-      })
-      .catch((e) => handleDatabaseErrors(e, "server", [serverId]));
-    // Makes typescript accept that server is not null.
-    // Really it can never be because Prisma would throw if it
-    // did not find a server above and handleDatabaseErrors is guaranteed
-    // to throw.
-    const server = dbServer!;
-    const commands = [
-      ["docker", "restart", shellEscape([server.containerName])].join(" "),
-    ];
-    if (server.isInResponseChain) {
-      // This service may be torn down by the restart.
-      // To avoid errors, respond before executing the restart and use an exterior, ephemeral container
-      // to perform the restart.
-      await ephemeralContainerRun(req, res, commands, server);
-    } else {
-      // The operation is safe and should not require an ephemeral container. Respond after execution of commands.
-      await exec(commands.join(";"));
-      res.json(server);
-    }
-  }
-
   /* POST update an existing server. */
   async updateServer(req: Request, res: Response) {
     const { hostId, serverId } = req.params;
@@ -224,9 +195,9 @@ class ServersService {
       ].join(" "),
     ];
     if (server.isInResponseChain) {
-      // This service may be torn down by the restart.
-      // To avoid errors, respond before executing the restart and use an exterior, ephemeral container
-      // to perform the restart.
+      // This service may be torn down by the stop.
+      // To avoid errors, respond before executing the stop and use an exterior, ephemeral container
+      // to perform the stop.
       await ephemeralContainerRun(req, res, commands, server);
     } else {
       // The operation is safe and should not require an ephemeral container. Respond after execution of commands.
